grammar.ebnf
expression ::= term ( ("+" | "-") term )*
term       ::= factor ( ("*" | "/") factor )*
factor     ::= ( "+" | "-" ) factor | primary
primary    ::= number | "(" expression ")"

number     ::= "0" ( "." digit+ )? | ("1" ... "9")+ ( "." digit+ )?
digit      ::= "0" ... "9"
